--- a/charts/oidc-rock/values.yaml
+++ b/charts/oidc-rock/values.yaml
@@ -1,5 +1,5 @@
 image:
-  repository: ghcr.io/michaelvanstraten/oidc-rock
+  repository: ghcr.io/fiji-flo/oidc-rock
   pullPolicy: IfNotPresent
   tag: ""
 
