--- a/.github/workflows/publish-oci-image.yaml
+++ b/.github/workflows/publish-oci-image.yaml
@@ -14,14 +14,23 @@ env:
 
 jobs:
   build-and-push-image:
-    name: Build and Publish OCI Image
-    runs-on: ubuntu-latest
+    name: Build and Publish OCI Image (${{ matrix.platform }})
+    runs-on: ${{ matrix.runs-on }}
     permissions:
       contents: read
       packages: write
       attestations: write
       id-token: write
-
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - platform: linux/amd64
+            arch: amd64
+            runs-on: ubuntu-latest
+          - platform: linux/arm64
+            arch: arm64
+            runs-on: ubuntu-24.04-arm
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
@@ -38,6 +47,13 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=ref,event=branch,suffix=-${{ matrix.arch }}
+            type=ref,event=tag,suffix=-${{ matrix.arch }}
+            type=ref,event=pr,suffix=-${{ matrix.arch }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Build and push OCI image
         id: push
@@ -47,6 +63,9 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          platforms: ${{ matrix.platform }}
 
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v3
@@ -54,3 +73,35 @@ jobs:
           subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
           subject-digest: ${{ steps.push.outputs.digest }}
           push-to-registry: true
+
+  merge-multiarch-manifest:
+    name: Merge and Push Multi-Arch OIC image
+    runs-on: ubuntu-latest
+    needs: build-and-push-image
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata (tags) for manifest merge
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Merge and Push
+        shell: bash
+        run: |
+          docker buildx imagetools create \
+            -t "${{ steps.meta.outputs.tags }}" \
+            "${{ steps.meta.outputs.tags }}-amd64" \
+            "${{ steps.meta.outputs.tags }}-arm64"
